Slider wrap fixed

--- a/app/styles/blocks/promo.scss
+++ b/app/styles/blocks/promo.scss
@@ -21,7 +21,6 @@
 
   &__container {
 
-    width: 300%;
     height: 100%;
     transition: margin 1s;
 
